(05 - 08) Primeiro código JavaScript

--- a/01-ola-mundo.html
+++ b/01-ola-mundo.html
@@ -9,5 +9,11 @@
 <body>
     <h1>Minha primeira página HMTL</h1>
     <p>Olá, Mundo!</p>
+
+    <script>
+        let nome = prompt('Qual é o seu nome?')
+        window.alert('Olá!' + nome)
+
+    </script>
 </body>
 </html>
