(16/08) Correção dos exercicios 01 e 02

--- a/ex01-par-impar.html
+++ b/ex01-par-impar.html
@@ -12,7 +12,7 @@
 
     <script>
         // Entrada e declaração de váriaveis
-        let num = Number(window.prompt("Informe um número: "))
+        let num = parseInt(window.prompt("Informe um número: "))
 
         // Operação
         if(isNaN(num)){
@@ -20,9 +20,9 @@
         }else{
             if(num % 2 === 0){
             // Saída de dados
-            window.alert(`O número ${num} é par`)
+            window.alert(`O número ${num} é PAR`)
             } else{
-            window.alert(`O número ${num} é ímpar`)
+            window.alert(`O número ${num} é ÍMPAR`)
         }
         }
     </script>
