--- a/ex05-placa-mercosul.html
+++ b/ex05-placa-mercosul.html
@@ -8,5 +8,24 @@
 </head>
 <body>
     
+
+    <script>
+        /*Recentemente, as placas de automóveis no Brasil passaram a usar o chamado "modelo Mercosul". Nesse modelo, o segundo dígito numérico do modelo anterior passou a ser representado por uma letra. A conversão é regida pela tabela:
+            Dígito         Letra               
+            0              A               
+            1              B               
+            2              C              
+            3              D               
+            4              E               
+            5              F               
+            6              G               
+            7              H               
+            8              I               
+            9              J            
+        Assim, uma placa tradicional ABC-1234, no formato do padrão Mercosul, ficaria ABC-1C34. Peça para o usuário informar um dígito válido entre 0 a 9. Com o loop do..while, faça a validação, repetindo a solicitação até que a resposta obtida seja válida. Em seguida, usando a estrutura de decisão switch..case, informe ao usuário a letra correspondente ao dígito informado.*/
+
+
+        
+    </script>
 </body>
 </html>
