--- a/ex07-soma-for.html
+++ b/ex07-soma-for.html
@@ -17,10 +17,7 @@
         */
 
         // Entrada
-        let num1
-        let num2
-        let i
-        let f
+        let num1, num2, i, f
         let soma = 0
 
         do{
