(13/ 09) Correção dos exercício 08 e 09 e teoria das funções

--- a/ex09-for-reverso.html
+++ b/ex09-for-reverso.html
@@ -34,7 +34,7 @@
             document.write(` [ ${num} ] `)
             
             if(cont !== 0){
-                fatorial = num * fatorial
+                fatorial *= num  
             }
             cont++
 
