--- a/ex12-calculadora-DOM.html
+++ b/ex12-calculadora-DOM.html
@@ -55,11 +55,11 @@
 
     <script>
         // Capturar elementos do HTML
-        const num1 = document.getElementById('num1')
-        const num2 = document.getElementById('num2')
-        const oper = document.getElementById('oper')
+        let num1 = document.getElementById('num1')
+        let num2 = document.getElementById('num2')
+        let oper = document.getElementById('oper')
         const calcular = document.getElementById('calcular')
-        let resultado = document.getElementById('resultado')
+        const resultado = document.getElementById('resultado')
         let resultadoOperacao
 
         // validar os dados de entrada
@@ -77,16 +77,15 @@
             if (oper.selectedIndex <= 0){
                 alert('Selecione uma forma de tratamento.')
                 oper.focus()
-                num1 = Number(num1)
-                num2 = Number(num2)
                 return false
-            }
-
+           }
             return true   
         }
 
         function executar(){
             if(validar()) {
+                let num1 = Number(document.getElementById('num1').value)
+                let num2 = Number(document.getElementById('num2').value)
                 switch(oper.selectedIndex){
                     case 1:
                         resultadoOperacao = (`${num1} + ${num2} = ${num1 + num2}`)
@@ -95,7 +94,7 @@
                         resultadoOperacao = (`${num1} - ${num2} = ${num1 - num2}`)
                         break
                     case 3:
-                        resultadoOperacao = (`${num1} * ${num2} = ${num1 * num2}`)
+                        resultadoOperacao = (`${num1} * ${num2} = ${num1 * num2} `)
                         break
                     case 4:
                         resultadoOperacao = (`${num1} / ${num2} = ${num1 / num2}`)
