(18/ 11) finalização do trabalho

--- a/ex15-vetor-DOM.html
+++ b/ex15-vetor-DOM.html
@@ -27,7 +27,7 @@
         */
 
             // Questão 1
-            let estados = [] //vetor vazio 
+            let estados = [] 
 
             // Questão 2
             estados.unshift('São paulo', 'Santa Catarina', 'Rio Grande do Sul','Rio de Janeiro', 'Paraná', 'Minas gerais', 'Espírito Santo' )
