--- a/ex15-vetor-DOM.html
+++ b/ex15-vetor-DOM.html
@@ -37,8 +37,8 @@
                 const itens = document.createElement("li")
                 itens.textContent = valores
 
-                const est = document.getElementById("estados")
-                est.appendChild(itens)
+                const estad = document.getElementById("estados")
+                estad.appendChild(itens)
             }
                   
     </script>
